# yet-another-dev-assistant

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: codeql.yml  python-app.yml
homebrew/: yada.rb
scripts/: coverage.sh  test.sh
tests/: test_cli.py  test_yada.config  test_yada_cli.py
yada/: __init__.py  action_agent.py  agent.py  assistant.py  cli.py  config.py  planner_agent.py  replanner_agent.py  sync_tool_node.py  tool_loader.py  utils.py  workflow.py  yada_cli.py
yada/tools/: __init__.py  docker_tools.py  filesystem_tools.py  github_tools.py  homebrew_tools.py  os_tools.py  web_browser_tools.py
